--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -179,13 +179,12 @@
   .home-module__statement-quote-wrapper {
     position: relative;
     margin: 0 auto;
-    max-width: 43em;
   }
 
   .home-module__statement-quote-wrapper:before {
     position: relative;
     @extend %sans-serif;
-    @include text-size($sans-xxxl);
+    @include text-size($sans-xxxxl);
     font-weight: bold;
     display: block;
     text-align: left;
@@ -198,7 +197,7 @@
 
     @include respond-above(medium) {
       line-height: 0.25;
-      margin-left: -15px;
+      margin-left: -12px;
       margin-top: 35px;
     }
   }
@@ -206,7 +205,7 @@
   .home-module__statement-quote-wrapper:after {
     position: relative;
     @extend %sans-serif;
-    @include text-size($sans-xxxl);
+    @include text-size($sans-xxxxl);
     font-weight: bold;
     display: block;
     text-align: right;
@@ -226,8 +225,9 @@
 
   p {
     @extend %sans-serif;
-    @include text-size($sans-xl);
+    @include text-size($sans-xl-v2);
     font-weight: bold;
+    max-width: 20em;
   }
 }
 
@@ -235,6 +235,23 @@
 .home-module__statement-video {
   background-color: var(--pop-color);
   padding: 0 var(--block-padding) var(--block-padding) var(--block-padding);
+}
+
+.home-module__statement-container {
+  // set type spec to match the statement quote p
+  // above, so they can have the same max-width
+  @extend %sans-serif;
+  @include text-size($sans-xl-v2);
+  font-weight: bold;
+  max-width: 20em;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.home-module__statement-video-title {
+  @include text-size($home-body-text);
+  padding-top: 0.5rem;
+  margin-bottom: var(--block-padding);
 }
 
 // Text Link
