updates home statement quote text size on mobile

--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -193,6 +193,7 @@
 
     @include respond-above(base) {
       line-height: 0.3;
+      margin-left: -5px;
     }
 
     @include respond-above(medium) {
